# mvm

./: .gitignore  .ur-seed-result  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Justfile  LICENSE  MIGRATING-FROM-V1.md  QUICKSTART.md  README.md  SECURITY.md  build.rs  cliff.toml  deny.toml  install.sh
crates/mvm-addon-dns/: Cargo.toml
crates/mvm-addon-dns/src/: lib.rs
crates/mvm-addon-vsock-bridge/: Cargo.toml
crates/mvm-addon-vsock-bridge/src/: lib.rs
crates/mvm-agent/: Cargo.toml
crates/mvm-agent/src/: agent.rs  lib.rs  node.rs  templates.rs
crates/mvm-agent/tests/: reconcile.rs
crates/mvm-apple-container/: Cargo.toml  build.rs
crates/mvm-apple-container/src/: lib.rs  macos.rs
crates/mvm-apple-container/swift/: .gitignore  Package.swift
crates/mvm-audit-signer/: Cargo.toml
crates/mvm-audit-signer/src/: canonical.rs  category.rs  chain.rs  config.rs  lib.rs  server.rs
crates/mvm-backend/: Cargo.toml
crates/mvm-backend/examples/: ch-bootcheck.rs
crates/mvm-backend/src/: apple_container.rs  audit_substrate.rs  backend.rs  ch_runtime.rs  cloud_hypervisor.rs  docker.rs  execution_context.rs  firecracker.rs  handle_registry.rs  host_gvproxy.rs  image.rs  lib.rs  libkrun.rs  microsandbox.rs  microvm.rs  microvm_nix.rs  mock.rs  mock_guest_agent.rs  netinit_audit.rs  network.rs  vz.rs  vz_control.rs
crates/mvm-backend/tests/: libkrun_lifecycle_e2e.rs  phase3c_supervisor_dispatch.rs
crates/mvm-bridge/: Cargo.toml
crates/mvm-bridge/fuzz/: Cargo.toml
crates/mvm-bridge/src/: endpoints.rs  lib.rs  main.rs  parse.rs
crates/mvm-broker/: Cargo.toml
crates/mvm-broker/src/: audit_client.rs  config.rs  lib.rs  registry.rs  server.rs
crates/mvm-build/: Cargo.toml  README.md
crates/mvm-build/examples/: mvm-app-deps-fixture-tool.rs
crates/mvm-build/src/: app_deps.rs  app_deps_gate.rs  artifacts.rs  build.rs  builder_backend_select.rs  builder_protocol.rs  builder_vm.rs  builder_vm_runtime.rs  cpio.rs  dev_build.rs  firecracker.rs  guest_agent.rs  lib.rs  libkrun_builder.rs  orchestrator.rs  packed_artifact.rs  persistent_builder.rs  rootfs.rs  runtime_overlay.rs  scripts.rs  stage0.rs  template_reuse.rs  vsock_builder.rs  vz_builder.rs
crates/mvm-build/tests/: app_deps_orchestrator.rs  oci_ext4_materialization.rs  oci_unpack_attacks.rs  oci_verity_sealing.rs  persistent_builder_supervisor.rs  pipeline.rs  runtime_overlay_build.rs  vsock_response_listener.rs  vz_builder_flake_invariant.rs
crates/mvm-builder/: Cargo.toml
crates/mvm-builder-init/: Cargo.toml
crates/mvm-builder-init/src/: boot_timings.rs  builder_request.rs  dispatch_response.rs  init.rs  install.rs  install_spec.rs  main.rs  network.rs  proxy.rs
crates/mvm-builder-init/tests/: builder_init_smoke.rs  qemu_smoke.rs
crates/mvm-cli/: Cargo.toml  README.md  build.rs
crates/mvm-cli/src/: bootstrap.rs  builder_vm_image.rs  commands.rs  config_watcher.rs  dev_cluster.rs  display.rs  doctor.rs  exec.rs  fleet.rs  http.rs  lib.rs  metrics_server.rs  output.rs  security_cmd.rs  shell_init.rs  template.rs  template_cmd.rs  ts_runner.rs  ui.rs  update.rs  upgrade.rs  watch.rs
crates/mvm-cli/tests/: auto_exec_node_record.rs  auto_exec_python_record.rs  compile_hello_app.rs  core_demo_e2e.rs  dev_up_smoke.rs  dispatch_host_bin_dir.rs  doctor_zigbuild_probe.rs  embedded_binaries.rs  host_binaries_extract.rs  host_binaries_manifest.rs
crates/mvm-coordinator/: Cargo.toml
crates/mvm-coordinator/src/: client.rs  config.rs  health.rs  idle.rs  lib.rs  proxy.rs  routing.rs  server.rs  wake.rs
crates/mvm-coordinator/tests/: routing.rs
crates/mvm-core/: Cargo.toml  README.md
crates/mvm-core/src/: agent.rs  audit.rs  build_env.rs  catalog.rs  config.rs  dev_network.rs  error.rs  lib.rs  metering.rs  node.rs  platform.rs  pool.rs  security.rs  session.rs  strings.rs  template.rs  trace.rs  user_config.rs  vm_backend.rs
crates/mvm-core/tests/: metering_audit_integration.rs
crates/mvm-egress-proxy/: Cargo.toml
crates/mvm-egress-proxy/src/: allowlist.rs  lib.rs  main.rs  proxy.rs
crates/mvm-firecracker-bridge/: Cargo.toml
crates/mvm-firecracker-bridge/fuzz/: Cargo.toml
crates/mvm-firecracker-bridge/src/: lib.rs  main.rs  parse.rs
crates/mvm-guest/: Cargo.toml  README.md
crates/mvm-guest/fuzz/: Cargo.toml  README.md
crates/mvm-guest/src/: builder_agent.rs  console.rs  entrypoint.rs  fs_rpc.rs  lib.rs  lifecycle_hooks.rs  netinit.rs  process_rpc.rs  runtime_config.rs  share.rs  volume.rs  vsock.rs  worker_pool.rs  worker_protocol.rs
crates/mvm-guest/tests/: entrypoint_execute.rs  worker_pool_warm.rs
crates/mvm-host-signer/: Cargo.toml
crates/mvm-host-signer/src/: config.rs  keystore.rs  lib.rs  server.rs
crates/mvm-host-vm-init/: Cargo.toml
crates/mvm-host-vm-init/src/: builder_request.rs  dispatch_response.rs  install.rs  install_spec.rs  main.rs  network.rs  proxy.rs  workload.rs  workload_proxy.rs
crates/mvm-ir/: Cargo.toml
crates/mvm-ir/data/: secret_field_tokens.txt  supported_languages.txt
crates/mvm-ir/src/: addon.rs  canonicalize.rs  data.rs  error_codes.rs  hash.rs  hooks.rs  lib.rs  validate.rs  version.rs  workload.rs
crates/mvm-ir/tests/: round_trip.rs  runtime_json_contract.rs  schema_shape.rs  validate.rs
crates/mvm-jailer-lite/: Cargo.toml  LANDLOCK.md  SECCOMP.md
crates/mvm-jailer-lite/src/: landlock.rs  lib.rs  seccomp.rs
crates/mvm-jailer-lite/tests/: landlock_property.rs  seccomp_property.rs
crates/mvm-libkrun/: Cargo.toml  build.rs
crates/mvm-libkrun-supervisor/: Cargo.toml
crates/mvm-libkrun/src/: lib.rs  (+3 more)
crates/mvm-mesh-dns/: Cargo.toml
crates/mvm-mesh-vsock-bridge/: Cargo.toml
crates/mvm-oci/: Cargo.toml
crates/mvm-plan/: Cargo.toml
crates/mvm-providers/: Cargo.toml
xtask/: Cargo.toml
xtask/src/: build_dev_image.rs  build_libkrun_smoke_image.rs  check_adr_coverage.rs  check_audit_positional.rs  check_doc_claims.rs  check_forbidden_deps.rs  check_mvm_host_binaries_sync.rs  check_no_display_on_secret_types.rs  check_no_overclaim.rs  check_spec_numbers.rs  gen_stubs.rs  main.rs  perf.rs
xtask/tests/: check_sync.rs
(+1207 files in other folders)
