[workspace]
members = [
    "crates/mvm-core",
    "crates/mvm-security",
    "crates/mvm-storage",
    "crates/mvm-plan",
    "crates/mvm-policy",
    "crates/mvm-supervisor",
    "crates/mvm-providers",
    "crates/mvm-backend",
    "crates/mvm-base",
    "crates/mvm",
    "crates/mvm-build",
    "crates/mvm-guest",
    "crates/mvm-cli",
    "crates/mvm-mcp",
    # plan 60 Phase 5 — build-time SDK port from ../mvmforge.
    # mvm-ir is the canonical Workload IR; mvm-sdk is the builder
    # surface; mvm-sdk-macros is a placeholder for the proc-macro
    # surface that lands in a Phase 5 follow-on.
    "crates/mvm-ir",
    "crates/mvm-sdk",
    "crates/mvm-sdk-macros",
    # plan 60 Phase 5 Slice C — in-guest entrypoint runner for
    # function-call workloads, ported from mvmforge-runtime.
    "crates/mvm-runner",
    "xtask",
]
# cargo-fuzz crates have to be excluded from the main workspace because
# they depend on libfuzzer-sys, which only builds under cargo-fuzz's
# wrapper (it injects the right linker flags + sanitizer toolchain).
# Plain `cargo build --workspace` would otherwise fail with linker
# errors. ADR-002 §W4.2.
exclude = [
    "crates/mvm-guest/fuzz",
]
resolver = "3"

[workspace.package]
# 0.14.0 — first version after the v1→v2 cutover (2026-05-11).
# v1's final release was 0.13.0 (tag v1-final, branch legacy/v1); the
# v2 rewrite ships under the same project name + binary but is
# functionally different software. Bumping the minor signals "0.x
# breaking changes" without prematurely committing to a 1.0 stability
# promise.
version = "0.14.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/tinylabscom/mvm"
homepage = "https://github.com/tinylabscom/mvm"
authors = ["mvm contributors"]

# Workspace-wide lint policy. Plan-60 Phase 0 exit criterion — every
# crate inherits this via `lints.workspace = true` in its own
# Cargo.toml. CLAUDE.md says "No `clippy::too_many_arguments`: never
# suppress this lint. Refactor into smaller functions or a config/
# params struct." The lint here enforces that workspace-wide so a
# future violator gets blocked at `cargo clippy --workspace --
# -D warnings` instead of slipping through.
[workspace.lints.clippy]
too_many_arguments = "deny"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# microsandbox (plan 60 ADR-013) — libkrun-backed, cross-platform
# (Linux KVM, macOS Hypervisor.framework, Windows pending) sandbox
# runtime. Phase 1 W2 wires it into the MicrosandboxBackend's
# start/stop/exec lifecycle.
microsandbox = "0.4.5"

# Pattern matching
aho-corasick = "1"
regex = "1"

# Crypto
aes-gcm = "0.10"
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }
hmac = "0.12"
rand = "0.8"
# `secrecy` wraps secret-carrying types so accidental `Debug`/`Display`
# becomes a compile error. Plan 63 W2 — `SecretBox<T>` pass on every
# `KeyProvider` / `WrappedKey` / snapshot-HMAC-key consumer.
secrecy = { version = "0.10", features = ["serde"] }
sha2 = "0.10"
zeroize = { version = "1", features = ["zeroize_derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
colored = "3"
indicatif = "0.17"
inquire = "0.7"

# Object storage abstraction (used for dev template registry)
opendal = { version = "0.50", features = ["services-s3"] }

# HTTP client (for CLI upgrade)
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }

# Name generation
names = { version = "0.14", default-features = false }

# Signal handling
ctrlc = "3.4"
libc = "0.2"

# Seccomp BPF compilation (W2.4 — per-service syscall filtering inside
# guests, applied via the `mvm-seccomp-apply` shim before execve into
# the service binary).
seccompiler = "0.5"

# File watching (dev-watch feature only)
notify = "7"
notify-debouncer-mini = "0.5"

# IP/CIDR matching for the L4 egress proxy's allow-list rules.
# Plan 60 Phase 3 Slice B. `serde` feature serialises `IpNet` as
# the canonical CIDR string ("10.0.0.0/24"), which is the wire
# format the policy bundle TOML uses.
ipnet = { version = "2", features = ["serde"] }

# Pure-Rust DNS resolver, used only by the opt-in custom-dns feature.
hickory-resolver = "0.24"

# Utilities
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
fs2 = "0.4"
# OS-native keystore (macOS Keychain / Linux Secret Service / Windows
# Credential Manager). Plan 63 W3 — KeyringProvider impl uses this for
# per-tenant DEK storage outside env vars or world-readable disk.
keyring = "3"
tempfile = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
uuid = { version = "1", features = ["v4"] }
which = "7"

# Internal crates.
#
# DRIFT-001 (Plan 31 Track A): the four crates that participate in the
# `backends-microsandbox` feature chain declare `default-features = false`
# at the workspace level. This is required because member crates can't
# override `default-features` on a workspace-inherited dep — Cargo accepts
# the override only when the workspace entry already has the field. The
# member crates that want the feature active opt back in via the
# `backends-microsandbox` feature chain (see `crates/mvm-cli/Cargo.toml`
# and the root `[features]` block below). Library consumers (e.g. mvmd)
# do `mvmctl = { default-features = false }` and pick up the off-state.
mvm-core = { path = "crates/mvm-core", version = "0.14.0" }
mvm-guest = { path = "crates/mvm-guest", version = "0.14.0" }
mvm-build = { path = "crates/mvm-build", version = "0.14.0", default-features = false }
mvm = { path = "crates/mvm", version = "0.14.0", default-features = false }
mvm-base = { path = "crates/mvm-base", version = "0.14.0" }
mvm-security = { path = "crates/mvm-security", version = "0.14.0" }
mvm-storage = { path = "crates/mvm-storage", version = "0.14.0" }
mvm-plan = { path = "crates/mvm-plan", version = "0.14.0" }
mvm-policy = { path = "crates/mvm-policy", version = "0.14.0" }
mvm-supervisor = { path = "crates/mvm-supervisor", version = "0.14.0" }
mvm-cli = { path = "crates/mvm-cli", version = "0.14.0", default-features = false }

# plan 60 Phase 5 — build-time SDK port from ../mvmforge.
mvm-ir = { path = "crates/mvm-ir", version = "0.14.0" }
mvm-sdk = { path = "crates/mvm-sdk", version = "0.14.0" }
mvm-sdk-macros = { path = "crates/mvm-sdk-macros", version = "0.14.0" }
mvm-mcp = { path = "crates/mvm-mcp", version = "0.14.0" }
mvm-providers = { path = "crates/mvm-providers", version = "0.14.0" }
mvm-backend = { path = "crates/mvm-backend", version = "0.14.0", default-features = false }

# Dev dependencies
assert_cmd = "2"
predicates = "3"

# Root facade crate — re-exports all workspace libraries and provides the `mvmctl` binary
[package]
name = "mvmctl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Firecracker microVM development tool"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lib]
name = "mvmctl"
path = "src/lib.rs"

[[bin]]
name = "mvmctl"
path = "src/main.rs"

[dependencies]
mvm-core.workspace = true
mvm-security.workspace = true
# `default-features = false` keeps the heavy microsandbox stack out of the
# lean default binary. Operators who need the libkrun/microsandbox path opt in
# with `--features backends-microsandbox`.
mvm = { workspace = true, default-features = false }
mvm-backend = { workspace = true, default-features = false }
mvm-build = { workspace = true, default-features = false }
mvm-guest.workspace = true
mvm-cli = { workspace = true, default-features = false }
anyhow.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2-foundation = { version = "0.3", features = ["NSRunLoop", "NSDate", "NSAutoreleasePool"] }

[dev-dependencies]
assert_cmd.workspace = true
chrono.workspace = true
# Plan 60 Phase 4 — `tests/audit_total_coverage.rs` walks the
# `clap::Command` tree returned by `mvm_cli::commands::cli_command()`
# to enforce that every subcommand has a declared audit posture.
clap.workspace = true
# Plan 69: local mock HTTP server for the `mvmctl update` live test.
# Avoids reaching the real GitHub release API in CI / on dev machines.
httpmock = "0.7"
# Plan 60 Phase 7a — `tests/tenant_destroy_e2e.rs` exercises the
# operator→auditor pipeline end-to-end. `mvm` (path dep above)
# pulls these transitively at runtime; the integration test
# binary needs its own usage.
ed25519-dalek.workspace = true
predicates.workspace = true
rand.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }

[features]
# Keep the default production build lean. Heavy integrations remain opt-in.
default = []
backends-microsandbox = [
    "mvm/backends-microsandbox",
    "mvm-backend/backends-microsandbox",
    "mvm-build/backends-microsandbox",
    "mvm-cli/backends-microsandbox",
]
custom-dns = ["mvm-cli/custom-dns"]
dev-watch = ["mvm-cli/dev-watch"]
manifest-verify = [
    "mvm/manifest-verify",
    "mvm-cli/manifest-verify",
    "mvm-security/manifest-verify",
]
template-registry-s3 = [
    "mvm/template-registry-s3",
    "mvm-cli/template-registry-s3",
]

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
