[workspace]
members = [
    "crates/mvm-core",
    "crates/mvm-security",
    "crates/mvm-storage",
    "crates/mvm-plan",
    "crates/mvm-policy",
    "crates/mvm-supervisor",
    "crates/mvm-providers",
    "crates/mvm-libkrun",
    "crates/mvm-backend",
    "crates/mvm-base",
    "crates/mvm",
    "crates/mvm-build",
    "crates/mvm-guest",
    "crates/mvm-cli",
    "crates/mvm-mcp",
    # plan 74 W1 — OCI image distribution client (registry resolution,
    # manifest fetch, digest verification; layer fetch + ext4 unpack +
    # verity generation land in subsequent W1 PRs). Anonymous-only at
    # W1.1; private auth lands later behind the credential redaction
    # contract from ADR-049. mvmd consumes this crate as a library per
    # ADR-048 §"Runtime Ownership" — keep its dep closure small.
    "crates/mvm-oci",
    # Plan 72 W3 — PID-1 for the libkrun builder VM. Linux-only at
    # runtime; the crate compiles on macOS / Windows as an inert
    # binary so workspace builds stay green for non-Linux contributors.
    "crates/mvm-builder-init",
    # Plan 73 Followup B.2.x — HTTP CONNECT proxy with hostname
    # allowlist for the builder VM's application-deps install.
    # Linux-only at runtime; same workspace-ergonomics rule as
    # mvm-builder-init.
    "crates/mvm-egress-proxy",
    # plan 60 Phase 5 — build-time SDK port from ../mvmforge.
    # mvm-ir is the canonical Workload IR; mvm-sdk is the builder
    # surface; mvm-sdk-macros is a placeholder for the proc-macro
    # surface that lands in a Phase 5 follow-on.
    "crates/mvm-ir",
    "crates/mvm-sdk",
    "crates/mvm-sdk-macros",
    # plan 60 Phase 5 Slice C — in-guest entrypoint runner for
    # function-call workloads, ported from mvmforge-runtime.
    "crates/mvm-runner",
    "xtask",
]
# cargo-fuzz crates have to be excluded from the main workspace because
# they depend on libfuzzer-sys, which only builds under cargo-fuzz's
# wrapper (it injects the right linker flags + sanitizer toolchain).
# Plain `cargo build --workspace` would otherwise fail with linker
# errors. ADR-002 §W4.2.
exclude = [
    "crates/mvm-guest/fuzz",
]
resolver = "3"

[workspace.package]
# 0.14.0 — first version after the v1→v2 cutover (2026-05-11).
# v1's final release was 0.13.0 (tag v1-final, branch legacy/v1); the
# v2 rewrite ships under the same project name + binary but is
# functionally different software. Bumping the minor signals "0.x
# breaking changes" without prematurely committing to a 1.0 stability
# promise.
version = "0.14.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/tinylabscom/mvm"
homepage = "https://github.com/tinylabscom/mvm"
authors = ["mvm contributors"]

# Workspace-wide lint policy. Plan-60 Phase 0 exit criterion — every
# crate inherits this via `lints.workspace = true` in its own
# Cargo.toml. CLAUDE.md says "No `clippy::too_many_arguments`: never
# suppress this lint. Refactor into smaller functions or a config/
# params struct." The lint here enforces that workspace-wide so a
# future violator gets blocked at `cargo clippy --workspace --
# -D warnings` instead of slipping through.
[workspace.lints.clippy]
too_many_arguments = "deny"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Pattern matching
aho-corasick = "1"
regex = "1"

# Crypto
aes-gcm = "0.10"
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }
hmac = "0.12"
rand = "0.8"
# `secrecy` wraps secret-carrying types so accidental `Debug`/`Display`
# becomes a compile error. Plan 63 W2 — `SecretBox<T>` pass on every
# `KeyProvider` / `WrappedKey` / snapshot-HMAC-key consumer.
secrecy = { version = "0.10", features = ["serde"] }
sha2 = "0.10"
zeroize = { version = "1", features = ["zeroize_derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
colored = "3"
indicatif = "0.17"
inquire = "0.7"

# Object storage abstraction (used for dev template registry)
opendal = { version = "0.50", features = ["services-s3"] }

# HTTP client (for CLI upgrade)
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }

# Name generation
names = { version = "0.14", default-features = false }

# Signal handling
ctrlc = "3.4"
libc = "0.2"

# Seccomp BPF compilation (W2.4 — per-service syscall filtering inside
# guests, applied via the `mvm-seccomp-apply` shim before execve into
# the service binary).
seccompiler = "0.5"

# File watching (dev-watch feature only)
notify = "7"
notify-debouncer-mini = "0.5"

# IP/CIDR matching for the L4 egress proxy's allow-list rules.
# Plan 60 Phase 3 Slice B. `serde` feature serialises `IpNet` as
# the canonical CIDR string ("10.0.0.0/24"), which is the wire
# format the policy bundle TOML uses.
ipnet = { version = "2", features = ["serde"] }

# Pure-Rust DNS resolver, used only by the opt-in custom-dns feature.
hickory-resolver = "0.24"

# Utilities
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
fs2 = "0.4"
# OS-native keystore (macOS Keychain / Linux Secret Service / Windows
# Credential Manager). Plan 63 W3 — KeyringProvider impl uses this for
# per-tenant DEK storage outside env vars or world-readable disk.
keyring = "3"
tempfile = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
uuid = { version = "1", features = ["v4"] }
which = "7"

# Addon machinery (mvm-sdk addon module, SDK port Phase 1b — ported
# from mvmforge-addon). flate2 + tar drive the deterministic tarball
# format; hex pairs with sha2 for the canonical hex digests in the IR;
# tree-sitter + tree-sitter-nix back the Nix-body validator. Pinned at
# the same versions mvmforge-addon used so we inherit its CVE / API
# story without re-evaluation.
flate2 = "1"
hex = "0.4"
tar = "0.4"
tree-sitter = "0.26.8"
tree-sitter-nix = "0.0.2"

# Compile pipeline (mvm-sdk compile module, SDK port Phase 2 — ported
# from mvmforge). globset drives source-bundling include/exclude
# patterns; the three tree-sitter language grammars feed the static
# AST walker that scopes function-entrypoint workloads to reachable
# code. Pinned at mvmforge's versions to inherit its CVE story.
globset = "0.4"
tree-sitter-python = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"

# Internal crates.
#
# Crates with optional default features declare `default-features = false`
# here because member crates can't override that on a workspace-inherited
# dependency unless the workspace entry already carries it. The root binary
# opts back into user-facing defaults through its own `[features]` block.
mvm-core = { path = "crates/mvm-core", version = "0.14.0" }
mvm-guest = { path = "crates/mvm-guest", version = "0.14.0" }
mvm-build = { path = "crates/mvm-build", version = "0.14.0", default-features = false }
mvm = { path = "crates/mvm", version = "0.14.0", default-features = false }
mvm-base = { path = "crates/mvm-base", version = "0.14.0" }
mvm-security = { path = "crates/mvm-security", version = "0.14.0" }
mvm-storage = { path = "crates/mvm-storage", version = "0.14.0" }
mvm-plan = { path = "crates/mvm-plan", version = "0.14.0" }
mvm-policy = { path = "crates/mvm-policy", version = "0.14.0" }
mvm-supervisor = { path = "crates/mvm-supervisor", version = "0.14.0" }
mvm-cli = { path = "crates/mvm-cli", version = "0.14.0", default-features = false }

# plan 60 Phase 5 — build-time SDK port from ../mvmforge.
mvm-ir = { path = "crates/mvm-ir", version = "0.14.0" }
mvm-sdk = { path = "crates/mvm-sdk", version = "0.14.0" }
mvm-sdk-macros = { path = "crates/mvm-sdk-macros", version = "0.14.0" }
mvm-mcp = { path = "crates/mvm-mcp", version = "0.14.0" }
mvm-providers = { path = "crates/mvm-providers", version = "0.14.0" }
# Plan 57 W1 — libkrun FFI bindings split out of mvm-providers so the
# bindgen + libclang build cost is isolated from the Apple-VZ objc2
# stack. Default feature set is empty; consumers wanting real FFI
# enable `libkrun-sys` on a host with libkrun installed.
mvm-libkrun = { path = "crates/mvm-libkrun", version = "0.14.0" }
mvm-backend = { path = "crates/mvm-backend", version = "0.14.0", default-features = false }

# Plan 73 Followup B.2.x — builder-VM egress allowlist proxy.
# mvm-builder-init spawns this as a subprocess before the
# installer + tears it down after.
mvm-egress-proxy = { path = "crates/mvm-egress-proxy", version = "0.14.0" }

# Dev dependencies
assert_cmd = "2"
predicates = "3"

# Root facade crate — re-exports all workspace libraries and provides the `mvmctl` binary
[package]
name = "mvmctl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Firecracker microVM development tool"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lib]
name = "mvmctl"
path = "src/lib.rs"

[[bin]]
name = "mvmctl"
path = "src/main.rs"

[dependencies]
mvm-core.workspace = true
mvm-security.workspace = true
mvm = { workspace = true, default-features = false }
mvm-backend = { workspace = true, default-features = false }
mvm-build = { workspace = true, default-features = false }
mvm-guest.workspace = true
mvm-cli = { workspace = true, default-features = false }
anyhow.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2-foundation = { version = "0.3", features = ["NSRunLoop", "NSDate", "NSAutoreleasePool"] }

[dev-dependencies]
assert_cmd.workspace = true
chrono.workspace = true
# Plan 60 Phase 4 — `tests/audit_total_coverage.rs` walks the
# `clap::Command` tree returned by `mvm_cli::commands::cli_command()`
# to enforce that every subcommand has a declared audit posture.
clap.workspace = true
# Plan 69: local mock HTTP server for the `mvmctl update` live test.
# Avoids reaching the real GitHub release API in CI / on dev machines.
httpmock = "0.7"
# Plan 60 Phase 7a — `tests/tenant_destroy_e2e.rs` exercises the
# operator→auditor pipeline end-to-end. `mvm` (path dep above)
# pulls these transitively at runtime; the integration test
# binary needs its own usage.
ed25519-dalek.workspace = true
predicates.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
toml.workspace = true
# Plan 73 Followup H — `tests/run_plan_mode.rs` resolves python3 from
# PATH to drive the SDK record-mode auto-exec end-to-end.
which.workspace = true

[features]
# Plan 72 W5.B cutover: `backends-builder-vm-libkrun` is default so the
# root `mvmctl` binary can dispatch to the libkrun-backed builder VM in
# `ensure_dev_image`. The dispatch falls back at runtime via
# `mvm_libkrun::is_available()` when libkrun isn't installed on the
# host, so a default-features binary works everywhere. Library consumers
# (mvmd) that want a lean closure build with `default-features = false`.
default = ["backends-builder-vm-libkrun"]
# Plan 72 W1: libkrun-backed builder VM. Now default-on (W5.B cutover).
# Forwards into both `mvm-build` (carries the `LibkrunBuilderVm` impl)
# and `mvm-cli` (carries the `ensure_dev_image` dispatch swap).
backends-builder-vm-libkrun = [
    "mvm-build/backends-builder-vm-libkrun",
    "mvm-cli/backends-builder-vm-libkrun",
]
custom-dns = ["mvm-cli/custom-dns"]
dev-watch = ["mvm-cli/dev-watch"]
manifest-verify = [
    "mvm/manifest-verify",
    "mvm-cli/manifest-verify",
    "mvm-security/manifest-verify",
]
template-registry-s3 = [
    "mvm/template-registry-s3",
    "mvm-cli/template-registry-s3",
]

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
