[package]
name = "xtask"
version = "0.0.0"
edition.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
clap.workspace = true
clap_mangen.workspace = true
mvm-cli.workspace = true
mvm-build = { workspace = true, features = ["backends-microsandbox"] }
mvm-core.workspace = true
sha2.workspace = true
tempfile.workspace = true

[dev-dependencies]

[lints]
workspace = true
