[package]
name = "xtask"
version = "0.0.0"
edition.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
clap.workspace = true
clap_mangen.workspace = true
mvm-build = { workspace = true, features = ["backends-microsandbox"] }
mvm-cli.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true

[dev-dependencies]

[lints]
workspace = true
